--- a/Catalogo/Style.css
+++ b/Catalogo/Style.css
@@ -18,9 +18,9 @@ header {
 
 .header-inner {
   background-color: #f5b7c6;
-  width: 60%; /* ocupa toda a largura */
+  width: 60%; 
   padding: 16px 40px;
-  border-radius: 0 0 16px 16px; /* só cantos inferiores arredondados */
+  border-radius: 0 0 16px 16px; 
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -66,20 +66,20 @@ nav a {
 
 main {
   flex: 1;
-  padding: 60px 20px; /* Aumentado */
-  min-height: 80vh; /* Força o conteúdo a ocupar mais altura */
+  padding: 60px 20px; 
+  min-height: 80vh; 
 }
 
 .catalogo .titulo {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 40px 0; /* Aumentado */
+  margin: 40px 0; 
 }
 
 .carrossel-container {
   position: relative;
-  margin-bottom: 60px; /* Aumentado */
+  margin-bottom: 60px; 
   overflow: hidden;
   padding: 0 40px;
 }
@@ -101,7 +101,7 @@ main {
   flex: 0 0 22%;
   max-width: 22%;
   background-color: #eee;
-  padding: 2rem; /* Aumentado */
+  padding: 2rem; 
   border-radius: 10px;
   text-align: center;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1);
@@ -153,7 +153,7 @@ main {
 .footer {
   background-color: white;
   color: #000;
-  padding: 2rem 1rem; /* Reduzido */
+  padding: 2rem 1rem; 
   font-family: sans-serif;
   border-top: 1px solid #ddd;
   display: flex;
@@ -226,6 +226,6 @@ main {
   }
 
   main {
-    padding: 40px 16px; /* Adicionado para mobile */
+    padding: 40px 16px; 
   }
 }
