--- a/Catalogo/Style.css
+++ b/Catalogo/Style.css
@@ -109,9 +109,10 @@ main {
 
 .produto img {
   width: 100%;
-  height: auto;
-  max-height: 180px;
-  object-fit: cover;
+  height: 300px; 
+  max-height: 300px; 
+  object-fit: contain; 
+  aspect-ratio: 4/3; 
   border-radius: 10px;
 }
 
