--- a/home/style.css
+++ b/home/style.css
@@ -130,11 +130,13 @@ nav a {
 
 .produto img {
   width: 100%;
-  height: auto;
-  max-height: 180px;
-  object-fit: cover;
+  height: 300px; 
+  max-height: 300px; 
+  object-fit: contain; 
+  aspect-ratio: 4/3; 
   border-radius: 10px;
 }
+
 
 .arrow {
   position: absolute;
