--- a/style.css
+++ b/style.css
@@ -2,9 +2,6 @@
    GLOBAL STYLES
 =================== */
 
-
-/* ...Sobre nos... */
-
 /* SOBRE NÓS - NOVO ESTILO */
 .containersobre {
   display: flex;
@@ -395,6 +392,17 @@ nav.menu a {
   height: auto;
   border-radius: 10px;
   object-fit: cover;
+}
+
+h2 {
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .produto {
+    flex: 0 0 70%;
+    max-width: 70%;
+  }
 }
 
 /* ===================
@@ -809,7 +817,7 @@ footer,
 =================== */
 main {
   flex: 1;
-  padding: 60px 20px;
+  padding: 30px 20px;
   min-height: 80vh;
 }
 
