--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   min-height: 500px;
   height: 70vh;
   max-width: 100vw;
-  background: #f8e3ea;
+  background: #f8f1ed;
   border-radius: 0;
   box-shadow: none;
   margin: 0;
@@ -20,7 +20,7 @@
   display: flex;
   align-items: stretch;
   justify-content: stretch;
-  background: #f8e3ea;
+  background: #f8f1ed;
   min-width: 0;
 }
 
@@ -31,12 +31,12 @@
   border-radius: 0;
   box-shadow: none;
   display: block;
-  background: #f0cdab;
+  background: #f0e4dc;
 }
 
 .textsobre {
   flex: 1 1 50%;
-  background: #f0cdab;
+  background: #f0e4dc;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -52,7 +52,7 @@
 
 .textsobre h3 {
   font-size: 1.1rem;
-  color: #b8b8b8;
+  color: #7b5e57;
   font-weight: 400;
   margin-bottom: 2rem;
   margin-top: 0;
@@ -91,7 +91,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #f0cdab;
+  background-color: #f0e4dc;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -110,7 +110,7 @@ header {
 }
 
 .header-inner {
-  background-color: #f5938b;
+  background-color: #eb7882;
   width: 90%;
   max-width: 1200px;
   padding: 10px 20px;
@@ -152,7 +152,7 @@ nav.menu a {
     position: absolute;
     top: 100%;
     right: 20px;
-    background-color: #f5938b;
+    background-color: #ccac95;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
@@ -179,7 +179,7 @@ nav.menu a {
 
 .pro1 h2 {
   margin-bottom: 20px;
-  color: #000000;
+  color: #42e2b000;
   font-size: 2rem;
 }
 
@@ -207,7 +207,7 @@ nav.menu a {
   height: auto;
   max-height: 1500px;
   object-fit: cover;
-  background-color: #fff;
+  background-color: #f8f1ed;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
@@ -228,15 +228,15 @@ nav.menu a {
 
 .carousel-destaques .caption h3 {
   margin: 0 0 10px;
-  color: #ff4081;
+  color: #a67c6b;
 }
 
 .carousel-destaques .caption button {
   margin-top: 10px;
   padding: 8px 14px;
   border: none;
-  background-color: #fff;
-  color: #000;
+  background-color: #f8f1ed;
+  color: #4b2e2b;
   font-weight: bold;
   cursor: pointer;
   border-radius: 4px;
@@ -244,8 +244,8 @@ nav.menu a {
 }
 
 .carousel-destaques .caption button:hover {
-  background-color: #ff4081;
-  color: #fff;
+  background-color: #a67c6b;
+  color: #f8f1ed;
 }
 
 @media (max-width: 768px) {
@@ -296,7 +296,7 @@ nav.menu a {
    CARROSSEL PRODUTOS
 =================== */
 .carrossel-pro2 {
-  background-color: #f0cdab;
+  background-color: #f0e4dc;
   position: relative;
   margin-bottom: 60px;
   overflow: hidden;
@@ -319,7 +319,7 @@ nav.menu a {
 .produto {
   flex: 0 0 22%;
   max-width: 22%;
-  background-color: #eee;
+  background-color: #f0e4dc;
   padding: 2rem;
   border-radius: 10px;
   text-align: center;
@@ -422,7 +422,7 @@ h2 {
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #f1e7c5;
+  background-color: #f8f1ed;
   position: relative;
 }
 
@@ -440,7 +440,7 @@ h2 {
 
 .caption h3 {
   margin-bottom: 5px;
-  color: #d81b60;
+  color: #7b5e57;
 }
 
 .caption p {
@@ -466,7 +466,7 @@ h2 {
 
 .promocao-linha .item {
   flex: 1 1 20%;
-  background-color: #fff0f5;
+  background-color: #f8f1ed;
   border-radius: 10px;
   padding: 10px;
   text-align: center;
@@ -482,14 +482,14 @@ h2 {
 }
 
 .promocao-linha .item h3 {
-  color: #d81b60;
+  color: #7b5e57;
   margin: 5px 0;
   font-size: 1rem;
 }
 
 .promocao-linha .item button {
   padding: 6px 12px;
-  background-color: #f48fb1;
+  background-color: #b58377;
   border: none;
   border-radius: 6px;
   color: white;
@@ -498,7 +498,7 @@ h2 {
 }
 
 .promocao-linha .item button:hover {
-  background-color: #d81b60;
+  background-color: #7b5e57;
 }
 
 /* SERVIÇOS */
@@ -522,7 +522,7 @@ h2 {
 
 .servico-item {
   background-color: white;
-  border: 1px solid #ccc;
+  border: 1px solid #ccac95;
   padding: 10px;
   flex: 1 1 200px;
   max-width: 250px;
@@ -580,7 +580,7 @@ h2 {
   display: inline-flex;
   align-items: center;
   background-color: #25d366;
-  color: #f1e7c5;
+  color: #f8f1ed;
   padding: 8px 14px;
   border-radius: 20px;
   font-weight: bold;
@@ -615,7 +615,7 @@ h2 {
 }
 
 .footer-bottom a {
-  color: #000;
+  color: #4b2e2b;
   text-decoration: none;
 }
 
@@ -637,8 +637,8 @@ h2 {
 
 footer,
 .footer {
-  background-color: #f48fb1;
-  color: #f1e7c5;
+  background-color: #b58377;
+  color: #f8f1ed;
   text-align: center;
   padding: 20px;
   margin-top: 40px;
@@ -646,7 +646,7 @@ footer,
 
 .footer {
   background-color: white;
-  color: #000;
+  color: #4b2e2b;
   padding: 2rem 1rem; 
   font-family: sans-serif;
   border-top: 1px solid #ddd;
@@ -682,7 +682,7 @@ footer,
 }
 
 .social-icons img:hover {
-  background-color: #ccc;
+  background-color: #ccac95;
 }
 
 .footer-right {
@@ -699,7 +699,7 @@ footer,
 
 .footer-right a {
   text-decoration: none;
-  color: #000;
+  color: #4b2e2b;
   font-size: 0.95rem;
 }
 
@@ -719,7 +719,7 @@ footer,
 }
 
 .footer-home-bottom a {
-  color: #000;
+  color: #4b2e2b;
   text-decoration: none;
 }
 
@@ -741,8 +741,8 @@ footer,
 
 footer,
 .footer-home {
-  background-color: #f48fb1;
-  color: #f1e7c5;
+  background-color: #b58377;
+  color: #f8f1ed;
   text-align: center;
   padding: 20px;
   margin-top: 40px;
@@ -750,7 +750,7 @@ footer,
 
 .footer-home {
   background-color: white;
-  color: #000;
+  color: #4b2e2b;
   padding: 2rem 1rem; 
   font-family: sans-serif;
   border-top: 1px solid #ddd;
@@ -786,7 +786,7 @@ footer,
 }
 
 .social-icons img:hover {
-  background-color: #ccc;
+  background-color: #ccac95;
 }
 
 .footer-home-right {
@@ -803,7 +803,7 @@ footer,
 
 .footer-home-right a {
   text-decoration: none;
-  color: #000;
+  color: #4b2e2b;
   font-size: 0.95rem;
 }
 
