--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ header nav.menu a {
 .produto {
   flex: 0 0 22%;
   max-width: 22%;
-  background-color: #f0e4dc;
+  background-color: #f5938b;
   padding: 2rem;
   border-radius: 10px;
   text-align: center;
